@@ -1,5 +1,11 @@
 2010-04-23  Sergio Martin <sergio.martin@artica.es>
 
+       * pandoradb.sql
+       extras/pandoradb_migrate_v3.0_to_v3.1.sql: Dropped the
+	foreign key between treport and tgrupo
+
+2010-04-23  Sergio Martin <sergio.martin@artica.es>
+
        * godmode/servers/manage_recontask_form.php: 
 	Added the All group to combo
 
